full site change

--- a/WebApplication1/WebApplication1/index.html
+++ b/WebApplication1/WebApplication1/index.html
@@ -1,81 +1,72 @@
-﻿
+
 <head>
-    <script src="menuscript.js" language="javascript" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="menustyle.css" media="screen, print" />
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-    <title>EduardConstruct</title>
-    <style type="text/css">
-        <!--
-        #Layer1 {
-            position: absolute;
-            width: 200px;
-            height: 115px;
-            z-index: 1;
-        }
-
-        body, td, th {
-            color: #000000;
-        }
-
-        body {
-            background-color: #FFEAEA;
-            background-image: url(wall.jpg);
-            background-repeat: repeat;
-        }
-
-        #Layer2 {
-            position: absolute;
-            width: 200px;
-            height: 115px;
-            z-index: 1;
-            left: 443px;
-            top: 474px;
-        }
-
-        #Layer3 {
-            position: absolute;
-            width: 200px;
-            height: 115px;
-            z-index: 1;
-            left: 387px;
-            top: 590px;
-        }
-
-        .style5 {
-            font-size: 18px;
-        }
-        -->
-    </style>
+<script src="menuscript.js" language="javascript" type="text/javascript"></script>
+<link rel="stylesheet" type="text/css" href="menustyle.css" media="screen, print" />
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
+<title>EduardConstruct</title>
+<style type="text/css">
+<!--
+#Layer1 {
+	position:absolute;
+	width:200px;
+	height:115px;
+	z-index:1;
+}
+body,td,th {
+	color: #000000;
+}
+body {
+	background-color: #FFEAEA;
+	background-image: url(wall.jpg);
+	background-repeat: repeat;
+}
+#Layer2 {
+	position:absolute;
+	width:200px;
+	height:115px;
+	z-index:1;
+	left: 443px;
+	top: 474px;
+}
+#Layer3 {
+	position:absolute;
+	width:200px;
+	height:115px;
+	z-index:1;
+	left: 387px;
+	top: 590px;
+}
+.style5 {font-size: 18px}
+-->
+</style>
 </head>
 
 <body>
-    <div align="center">
-        <p><img src="renovari-amenajari-construc.gif" width="800" height="120"></p>
-        <table width="800" height="60" background="Red button bar.jpg">
-            <tr>
-                <td width="100" height="52"><div align="center"><img src="buttons/Home-page.gif" width="100" height="50"></div></td>
-                <td width="104"><div align="center"><a href="proiecte.html"><img src="buttons/buton-proiecte.gif" width="100" height="50" border="0"></a></div></td>
-                <td width="100"><div align="center"><a href="servicii.html"><img src="buttons/Buton-servicii.gif" width="100" height="50" border="0"></a></div></td>
-                <td width="100"><div align="center"><a href="oferta.xlsx"><img src="buttons/buton-tarife.gif" width="100" height="50" border="0"></a></div></td>
-                <td width="100"><div align="center"><a href="contact.html"><img src="buttons/Buton-contact.gif" width="100" height="50" border="0"></a></div></td>
-            </tr>
-        </table>
-        <p>&nbsp;</p>
-    </div>
-    <div align="center"></div>
-    <div align="center">
-        <table width="799" border="8" align="center" bordercolor="#FF0000">
-            <tr>
-                <td width="200" height="223">
-                    <p align="justify"><img src="poze site/DSC00531.JPG" width="200" height="174"></p>
-                    <p></p>
-                </td>
-                <td width="383"><p align="justify"><span class="style5"><strong>Firma nostra se ocupa de o gama larga de amenajari si constructii de cea mai buna calitate , acoperind toate detaliile unei constructii de la inceput pana la sfarsit. Atentia cu care sunt executate lucrarile  fiind desavarsita, iar rezultatul este unul de o calitate superioara, cum se poate urmari in sectiunea proiecte a site-ului nostru</strong>.</span></p>      </td>
-                <td width="200"><div align="center"><img src="poze site/DSC00569.JPG" width="200" height="174"></div></td>
-            </tr>
-        </table>
-    </div>
-    <p align="center">&nbsp;</p>
-    <p align="center">||Website designed by Z-design Bucharest|| <a href="http://www.facebook.com/profile.php?id=1137227965&sk=info"><img src="poze site/logo-Zdesign.gif" width="90" height="35"></a>||</p>
+<div align="center">
+  <p><img src="renovari-amenajari-construc.gif" width="800" height="120"></p>
+  <table width="800" height="60" background="Red button bar.jpg">
+    <tr>
+      <td width="100" height="52"><div align="center"><img src="buttons/Home-page.gif" width="100" height="50"></div></td>
+      <td width="104"><div align="center"><a href="proiecte.html"><img src="buttons/buton-proiecte.gif" width="100" height="50" border="0"></a></div></td>
+      <td width="100"><div align="center"><a href="servicii.html"><img src="buttons/Buton-servicii.gif" width="100" height="50" border="0"></a></div></td>
+      <td width="100"><div align="center"><a href="oferta.xlsx"><img src="buttons/buton-tarife.gif" width="100" height="50" border="0"></a></div></td>
+      <td width="100"><div align="center"><a href="contact.html"><img src="buttons/Buton-contact.gif" width="100" height="50" border="0"></a></div></td>
+    </tr>
+  </table>
+  <p>&nbsp;</p>
+</div>
+<div align="center"></div>
+<div align="center">
+  <table width="799" border="8" align="center" bordercolor="#FF0000">
+    <tr>
+      <td width="200" height="223"><p align="justify"><img src="poze site/DSC00531.JPG" width="200" height="174"></p>
+      <p></p></td>
+      <td width="383"><p align="justify"><span class="style5"><strong>Firma nostra se ocupa de o gama larga de amenajari si constructii de cea mai buna calitate , acoperind toate detaliile unei constructii de la inceput pana la sfarsit. Atentia cu care sunt executate lucrarile  fiind desavarsita, iar rezultatul este unul de o calitate superioara, cum se poate urmari in sectiunea proiecte a site-ului nostru</strong>.</span></p>      </td>
+      <td width="200"><div align="center"><img src="poze site/DSC00569.JPG" width="200" height="174"></div></td>
+    </tr>
+  </table>
+</div>
+<p align="center">&nbsp;</p>
+<p align="center">||Website designed by Z-design Bucharest|| <a href="http://www.facebook.com/profile.php?id=1137227965&sk=info"><img src="poze site/logo-Zdesign.gif" width="90" height="35"></a>||</p>
 </body>
 </html>
